Adds local file selection button to side nav bar. Needs to be updates to have bootstrap aesthetic, but just to see code. Also no functionality. Also need to look into memory limits

--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -56,10 +56,11 @@
       <div class="position-sticky pt-3">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
-              <span data-feather="home"></span>
-              Open File
-            </a>
+            <!-- Code for selecting file from computer, action calls javascript function so that is TODO -->
+            <form action="">
+              <label for="eeg_file">Select a file:</label>
+              <input type="file" id="eeg_file" name="eeg_file"><br><br>
+            </form>
           </li>
         </ul>
       </div>
