--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -8,12 +8,10 @@
     <meta name="generator" content="Hugo 0.80.0">
     <title>EEG Display · Bootstrap v5.0</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/dashboard/">
-
     
 
     <!-- Bootstrap core CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
     <style>
       .bd-placeholder-img {
@@ -31,9 +29,6 @@
       }
     </style>
 
-    
-    <!-- Custom styles for this template -->
-    <link href="dashboard.css" rel="stylesheet">
   </head>
   <body>
     
@@ -42,12 +37,6 @@
   <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
-  <ul class="navbar-nav px-3">
-    <li class="nav-item text-nowrap">
-      <a class="nav-link" href="#">Sign out</a>
-    </li>
-  </ul>
 </header>
 
 <div class="container-fluid">
@@ -57,10 +46,10 @@
         <ul class="nav flex-column">
           <li class="nav-item">
             <!-- Code for selecting file from computer, action calls javascript function so that is TODO -->
-            <form action="">
-              <label for="eeg_file">Select a file:</label>
-              <input type="file" id="eeg_file" name="eeg_file"><br><br>
-            </form>
+              <form action="">
+                <label for="eeg_file">Open File:</label><br>
+                <input type="file" id="eeg_file" name="eeg_file"><br><br>
+              </form>
           </li>
         </ul>
       </div>
@@ -68,7 +57,7 @@
 
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Dashboard</h1>
+        <h1 class="h2">EEG Display</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group me-2">
             <button type="button" class="btn btn-sm btn-outline-secondary">Open Annotation</button>
