Accepts .*ref, .*edf

--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -49,7 +49,7 @@
             <!-- Code for selecting file from computer, action calls javascript function so that is TODO -->
               <button class="btn btn-sm btn-outline-secondary" onclick="openEEGFILE();">Select File</button>
               <form id="eeg_file_form" action="" style="display: none">
-                <input type="file" id="eeg_file" name="eeg_file"><br><br>
+                <input type="file" id="eeg_file" name="eeg_file" , accept=".rec, .edf"><br><br>
                 <input type="submit"/>
               </form>
           </li>
