--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -13,8 +13,6 @@
 
     <!-- IBRAIN javascript source -->
     <script type="text/javascript" src="../static/index_source.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
-
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <style>
@@ -33,43 +31,39 @@
         }
     </style>
 </head>
-<body onLoad = "loadIndexPage();">
+<body>
+    
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
         <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">IBRAIN</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
     </header>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
 
     <div class="container-fluid">
         <div class="row">
-            <!-- SIDE BAR-->
             <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
                 <div class="position-sticky pt-3">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <!-- SELECT EEG FILE -->
-                            <button class="btn btn-sm btn-outline-secondary" onclick="openFileSelect();">Select File</button><br>
-
-                            <form method="POST" id="file_form" action="/upload_eeg" style=" display: none" enctype="multipart/form-data">
-                                <div class="form-group">
-                                    <div class="custom-file">
-                                        <input type="file" class="custom-file-input" id="eeg_file" name="eeg_file" accept=".rec, .edf"><br> <!-- 'eeg_file' to be called in flask-->
-                                    </div>
+                            <!-- Code for selecting file from computer, action calls javascript function so that is TODO -->
+                            <button class="btn btn-sm btn-outline-secondary" onclick="openEEGFILE();">Select File</button>
+                            <form method = "POST" id="eeg_file_form" action="" style=" display: none" enctype="multipart/form-data">
+                                <div class="custom-file">
+                                    <input type="file" id="eeg_file" name="eeg_file", accept=".rec, .edf"><br><br> <!-- 'eeg_file' to be called in flask-->
+                                    <input type="file" class="custom-file-input" id="customFile">
+                                    <label class="custom-file-label" for="customFile">Choose file</label>
                                 </div>
-                                <input onclick="openFileSelect();select();" type="submit"/>
-                            </form>
-                            <!-- SELECT ELECTRODE-->
-                            <button class = "btn btn-sm btn-outline-secondary" id="elec_button" style="display: none" > Select Electrodes </button>
-                            <label for="electrode_form">  </label>
-                            <form method = "POST" id="electrode_form" action="electrode_select" style="display: none" enctype="multipart/form-data">
+                                <input type="submit"/>
                             </form>
                         </li>
                     </ul>
                 </div>
             </nav>
+
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                     <h1 class="h2">EEG Display</h1>
@@ -80,8 +74,8 @@
                         </div>
                     </div>
                 </div>
-                <div id="time_series">
-                </div>
+
+                <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
             </main>
         </div>
     </div>
