--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -31,7 +31,7 @@
         }
     </style>
 </head>
-<body>
+<body onload="loadIndexPage();">
     
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
         <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">IBRAIN</a>
@@ -40,24 +40,38 @@
         </button>
     </header>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
 
     <div class="container-fluid">
         <div class="row">
+            <!-- SIDE BAR-->
             <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
                 <div class="position-sticky pt-3">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <!-- Code for selecting file from computer, action calls javascript function so that is TODO -->
-                            <button class="btn btn-sm btn-outline-secondary" onclick="openEEGFILE();">Select File</button>
-                            <form method = "POST" id="eeg_file_form" action="" style=" display: none" enctype="multipart/form-data">
-                                <div class="custom-file">
-                                    <input type="file" id="eeg_file" name="eeg_file", accept=".rec, .edf"><br><br> <!-- 'eeg_file' to be called in flask-->
-                                    <input type="file" class="custom-file-input" id="customFile">
-                                    <label class="custom-file-label" for="customFile">Choose file</label>
+                            <!-- SELECT EEG FILE -->
+                            <button class="btn btn-sm btn-outline-secondary" onclick="openFileSelect();">Select File</button><br>
+                            <form method="POST" id="file_form" action="" style=" display: none" enctype="multipart/form-data">
+                                <div class="form-group">
+                                    <div class="custom-file">
+                                        <input type="file" class="custom-file-input" id="eeg_file" name="eeg_file" accept=".rec, .edf"><br> <!-- 'eeg_file' to be called in flask-->
+                                    </div>
                                 </div>
-                                <input type="submit"/>
+                                <input onclick="openFileSelect();" type="submit"/>
+                            </form>
+                            <!-- SELECT ELECTRODE-->
+                            <form method = "POST" id="electrode_form" action="" style="display: none" enctype="text/plain">
+                                <label for="electrode_form">Select Electrodes</label>
+                                <div class="form-group">
+                                    <div class="custom-control custom-checkbox">
+                                        <span>
+                                            <input type="checkbox" class="custom-control-input" id="customCheck1">
+                                            <label class="custom-control-label" for="customCheck1">Electrode Test</label>
+                                        </span>
+                                    </div>
+                                </div>
+                                <input onclick="openElectrodeSelect();" type="submit"/>
                             </form>
                         </li>
                     </ul>
