Fixes some attributes of the select electrode form for server to be able to read it

--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -62,7 +62,7 @@
                             </form>
                             <!-- SELECT ELECTRODE-->
                             <label for="electrode_form">Select Electrodes</label>
-                            <form method = "POST" id="electrode_form" action="" style="display: none" enctype="text/plain">
+                            <form method = "POST" id="electrode_form" action="electrode_select" style="display: none" enctype="multipart/form-data">
                             </form>
                         </li>
                     </ul>
