--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -80,7 +80,7 @@
                     </div>
                 </div>
 
-                <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
+                <canvas  id="graph" class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
             </main>
         </div>
     </div>
