Remove single chart in index page. Add empty div to contain multiple graphs. Remove single graph javascript code. Add creation of canvas's according to selected electrodes. Add creation of charts per incoming data. No styling

--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -81,8 +81,8 @@
                         </div>
                     </div>
                 </div>
-
-                <canvas  id="graph" class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
+                <div id="time_series">
+                </div>
             </main>
         </div>
     </div>
