--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -33,7 +33,7 @@
         }
     </style>
 </head>
-<body onload="loadIndexPage();">
+<body onLoad = "loadIndexPage();">
     
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
         <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">IBRAIN</a>
