--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -62,7 +62,7 @@
                                 <input onclick="openFileSelect();" type="submit"/>
                             </form>
                             <!-- SELECT ELECTRODE-->
-                            <label for="electrode_form">Select Electrodes</label>
+                            <label for="electrode_form">Select Electrodes</label><!-- Make button that triggers the electrode list-->
                             <form method = "POST" id="electrode_form" action="electrode_select" style="display: none" enctype="multipart/form-data">
                             </form>
                         </li>
