--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -13,6 +13,8 @@
 
     <!-- IBRAIN javascript source -->
     <script type="text/javascript" src="../static/index_source.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
+
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <style>
@@ -51,7 +53,7 @@
                         <li class="nav-item">
                             <!-- SELECT EEG FILE -->
                             <button class="btn btn-sm btn-outline-secondary" onclick="openFileSelect();">Select File</button><br>
-                            <form method="POST" id="file_form" action="" style=" display: none" enctype="multipart/form-data">
+                            <form method="POST" id="file_form" action="/upload_eeg" style=" display: none" enctype="multipart/form-data">
                                 <div class="form-group">
                                     <div class="custom-file">
                                         <input type="file" class="custom-file-input" id="eeg_file" name="eeg_file" accept=".rec, .edf"><br> <!-- 'eeg_file' to be called in flask-->
@@ -60,12 +62,9 @@
                                 <input onclick="openFileSelect();" type="submit"/>
                             </form>
                             <!-- SELECT ELECTRODE-->
+                            <button class="btn btn-sm btn-outline-secondary" onclick="openElectrodeSelect();">Select Electrodes</button><br>
+                            <form method = "POST" id="electrode_form" action="electrode_select" style="display: none" enctype="multipart/form-data">
                             <label for="electrode_form">Select Electrodes</label>
-                            <form method = "POST" id="electrode_form" action="" style="display: none" enctype="text/plain">
-                                <span>
-                                    <input type="checkbox" class="custom-control-input" id="customCheck1">
-                                    <label class="custom-control-label" for="customCheck1">Electrode Test</label>
-                                </span>
                             </form>
                         </li>
                     </ul>
@@ -77,12 +76,17 @@
                     <div class="btn-toolbar mb-2 mb-md-0">
                         <div class="btn-group me-2">
                             <button type="button" class="btn btn-sm btn-outline-secondary">Open Annotation</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Select Time</button>
+                            <!-- Select time duration-->
+                            <button type="button" class="btn btn-sm btn-outline-secondary" onclick="openDurationSelect();">Select Time</button>
+                            <form method="POST" id="duration_form" action="/upload_duration" style=" display: none" enctype="multipart/form-data">
+                                <input type="number" id="duration" name="duration" min="1" max="60">
+                                <input onclick="openDurationSelect();" type="submit"/>
+                            </form>
                         </div>
                     </div>
                 </div>
-
-                <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
+                <div id="time_series">
+                </div>
             </main>
         </div>
     </div>
