--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -62,8 +62,9 @@
                                 <input onclick="openFileSelect();" type="submit"/>
                             </form>
                             <!-- SELECT ELECTRODE-->
-                            <label for="electrode_form">Select Electrodes</label>
+                            <button class="btn btn-sm btn-outline-secondary" onclick="openElectrodeSelect();">Select Electrodes</button><br>
                             <form method = "POST" id="electrode_form" action="electrode_select" style="display: none" enctype="multipart/form-data">
+                            <label for="electrode_form">Select Electrodes</label>
                             </form>
                         </li>
                     </ul>
@@ -75,7 +76,12 @@
                     <div class="btn-toolbar mb-2 mb-md-0">
                         <div class="btn-group me-2">
                             <button type="button" class="btn btn-sm btn-outline-secondary">Open Annotation</button>
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Select Time</button>
+                            <!-- Select time duration-->
+                            <button type="button" class="btn btn-sm btn-outline-secondary" onclick="openDurationSelect();">Select Time</button>
+                            <form method="POST" id="duration_form" action="/upload_duration" style=" display: none" enctype="multipart/form-data">
+                                <input type="number" id="duration" name="duration" min="1" max="60">
+                                <input onclick="openDurationSelect();" type="submit"/>
+                            </form>
                         </div>
                     </div>
                 </div>
