Adds buttons to move around data by the chosen duration

--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -75,6 +75,9 @@
                     <h1 class="h2">EEG Display</h1>
                     <div class="btn-toolbar mb-2 mb-md-0">
                         <div class="btn-group me-2">
+                            <button type="button" onclick="displayData(-1);" class="btn btn-sm btn-outline-secondary">Left</button>
+                            <button type="button" onclick="displayData(1);" class="btn btn-sm btn-outline-secondary">Right</button>
+                            <!-- Open annotation-->
                             <button type="button" class="btn btn-sm btn-outline-secondary">Open Annotation</button>
                             <!-- Select time duration-->
                             <button type="button" class="btn btn-sm btn-outline-secondary" onclick="openDurationSelect();">Select Time</button>
