--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -33,16 +33,17 @@
         }
     </style>
 </head>
-<body onload="loadIndexPage();">
-    
+<body id="body" onload="loadIndexPage();">
+    <!-- TOP HEADER BAR -->
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+        <!-- Title -->
         <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">IBRAIN</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <a>Menu</a>
             </span>
-
         </button>
+        <!-- Tools (annotation, and time duration -->
         <div class="btn-toolbar mb-2 mb-md-0">
             <div class="btn-group me-2">
                 <button type="button" onclick="displayData(-1);" class="btn btn-sm btn-outline-secondary">Left</button>
@@ -91,6 +92,7 @@
                     </ul>
                 </div>
             </nav>
+            <!-- Graph area -->
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <br>
                 <div id="time_series"></div>
