--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -60,12 +60,15 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
 
-    <div class="container-fluid">
+    <div class="container-fluid" >
         <div class="row">
             <!-- SIDE BAR-->
-            <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+            <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse" >
                 <div class="position-sticky pt-3">
                     <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <div id="title"></div>
+                        </li>
                         <li class="nav-item">
                             <!-- SELECT EEG FILE -->
                             <button class="btn btn-sm btn-outline-secondary" onclick="openFileSelect();">Select File</button><br>
@@ -77,10 +80,14 @@
                                 </div>
                                 <input onclick="openFileSelect();" type="submit"/>
                             </form>
+                        </li>
+                        <li>
                             <!-- SELECT ELECTRODE-->
                             <button class="btn btn-sm btn-outline-secondary" onclick="openElectrodeSelect();">Select Electrodes</button><br>
                             <form method = "POST" id="electrode_form" action="electrode_select" style="display: none" enctype="multipart/form-data">
                             </form>
+                        </li>
+                        <li>
                             <!-- Close EEG FILE -->
                             <form method = "POST" id="close_file" action="/delete" enctype="multipart/form-data">
                                 <input class="btn btn-sm btn-outline-secondary" type="submit" value="Close file">
