--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -31,53 +31,84 @@
                 font-size: 3.5rem;
             }
         }
+
+        .sidepanel  {
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  height: 250px;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+
+.sidepanel a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidepanel a:hover {
+  color: #f1f1f1;
+}
+
+.sidepanel .closebtn {
+  position: absolute;
+  top: 5;
+  right: 25px;
+  font-size: 36px;
+}
+
+.openbtn {
+  font-size: 20px;
+  cursor: pointer;
+  background-color: #111;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+}
+
+.openbtn:hover {
+  background-color:#444;
+}
     </style>
-
-<!--    For adding side-scroll -->
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-      <script type="text/javascript" src="https://rawgit.com/nnnick/Chart.js/v1.0.2/Chart.min.js"></script>
-      <style id="compiled-css" type="text/css">
-
-.chartWrapper {/* w w w. j a v  a2 s.co  m*/
-   position: relative;
-}
-.chartWrapper > canvas {
-   position: absolute;
-   left: 0;
-   top: 0;
-   pointer-events:none;
-}
-.chartAreaWrapper {
-   width: 600px;
-   overflow-x: scroll;
-}
-
-
-      </style>
-
 </head>
-<body onload="loadIndexPage();">
-
+<body id="body" onload="loadIndexPage();">
+    <!-- TOP HEADER BAR -->
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+        <!-- Title -->
         <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">IBRAIN</a>
         <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon">
+                <a>Menu</a>
+            </span>
         </button>
+        <!-- Tools (annotation, and time duration -->
+        <div class="btn-toolbar mb-2 mb-md-0">
+            <div class="btn-group me-2">
+                <!-- Open annotation-->
+                <button type="button" class="btn btn-sm btn-outline-secondary">Open Annotation</button>
+                <!-- Select time duration-->
+                <button type="button" class="btn btn-sm btn-outline-secondary" onclick="openDurationSelect();">Select Time</button>
+                <form method="POST" id="duration_form" action="/upload_duration" style=" display: none" enctype="multipart/form-data">
+                    <input type="number" id="duration" name="duration" min="1" max="60">
+                    <input onclick="openDurationSelect();" type="submit"/>
+                </form>
+            </div>
+        </div>
     </header>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
-
-    <div class="container-fluid">
-        <div class="row">
-            <!-- SIDE BAR-->
-            <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-                <div class="position-sticky pt-3">
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                            <!-- SELECT EEG FILE -->
-                            <button class="btn btn-sm btn-outline-secondary" onclick="openFileSelect();">Select File</button><br>
-                            <form method="POST" id="file_form" action="/upload_eeg" style=" display: none" enctype="multipart/form-data">
+<div id="mySidepanel" class="sidepanel">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+  <a href="#"><button class="btn btn-sm btn-outline-secondary" onclick="openFileSelect();">Select File</button><br></a>
+     <form method="POST" id="file_form" action="/upload_eeg" style=" display: none" enctype="multipart/form-data">
                                 <div class="form-group">
                                     <div class="custom-file">
                                         <input type="file" class="custom-file-input" id="eeg_file" name="eeg_file" accept=".rec, .edf"><br> <!-- 'eeg_file' to be called in flask-->
@@ -85,45 +116,69 @@
                                 </div>
                                 <input onclick="openFileSelect();" type="submit"/>
                             </form>
-                            <!-- SELECT ELECTRODE-->
-                            <button class="btn btn-sm btn-outline-secondary" onclick="openElectrodeSelect();">Select Electrodes</button><br>
-                            <form method = "POST" id="electrode_form" action="electrode_select" style="display: none" enctype="multipart/form-data">
+  <a href="#"><button class="btn btn-sm btn-outline-secondary" onclick="openElectrodeSelect();">Select Electrodes</button><br></a>
+    <form method = "POST" id="electrode_form" action="electrode_select" style="display: none" enctype="multipart/form-data">
                             </form>
-                            <!-- Close EEG FILE -->
-                            <form method = "POST" id="close_file" action="/delete" enctype="multipart/form-data">
+  <a href="#"> <form method = "POST" id="close_file" action="/delete" enctype="multipart/form-data">
                                 <input class="btn btn-sm btn-outline-secondary" type="submit" value="Close file">
                                 <br>
-                            </form>
+                            </form></a>
+<!--  <a href="#">Contact</a>-->
+</div>
+
+<button class="openbtn" onclick="openNav()">☰ Menu</button>
+
+    <div class="container-fluid" >
+        <div class="row">
+            <!-- SIDE BAR-->
+            <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse" >
+                <div class="position-sticky pt-3">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <div id="title"></div>
                         </li>
+                        <li class="nav-item">
+                            <!-- SELECT EEG FILE -->
+<!--                            <button class="btn btn-sm btn-outline-secondary" onclick="openFileSelect();">Select File</button><br>-->
+<!--                            <form method="POST" id="file_form" action="/upload_eeg" style=" display: none" enctype="multipart/form-data">-->
+<!--                                <div class="form-group">-->
+<!--                                    <div class="custom-file">-->
+<!--                                        <input type="file" class="custom-file-input" id="eeg_file" name="eeg_file" accept=".rec, .edf"><br> &lt;!&ndash; 'eeg_file' to be called in flask&ndash;&gt;-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                                <input onclick="openFileSelect();" type="submit"/>-->
+<!--                            </form>-->
+                        </li>
+                        <li>
+                            <!-- SELECT ELECTRODE-->
+<!--                            <button class="btn btn-sm btn-outline-secondary" onclick="openElectrodeSelect();">Select Electrodes</button><br>-->
+<!--                            <form method = "POST" id="electrode_form" action="electrode_select" style="display: none" enctype="multipart/form-data">-->
+<!--                            </form>-->
+                        </li>
+<!--                        <li>-->
+<!--                            &lt;!&ndash; Close EEG FILE &ndash;&gt;-->
+<!--                            <form method = "POST" id="close_file" action="/delete" enctype="multipart/form-data">-->
+<!--                                <input class="btn btn-sm btn-outline-secondary" type="submit" value="Close file">-->
+<!--                                <br>-->
+<!--                            </form>-->
+<!--                        </li>-->
                     </ul>
                 </div>
-            </nav>
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">EEG Display</h1>
-                    <div class="btn-toolbar mb-2 mb-md-0">
-                        <div class="btn-group me-2">
-                            <button type="button" onclick="displayData(-1);" class="btn btn-sm btn-outline-secondary">Left</button>
-                            <button type="button" onclick="displayData(1);" class="btn btn-sm btn-outline-secondary">Right</button>
-                            <!-- Open annotation-->
-                            <button type="button" class="btn btn-sm btn-outline-secondary">Open Annotation</button>
-                            <!-- Select time duration-->
-                            <button type="button" class="btn btn-sm btn-outline-secondary" onclick="openDurationSelect();">Select Time</button>
-                            <form method="POST" id="duration_form" action="/upload_duration" style=" display: none" enctype="multipart/form-data">
-                                <input type="number" id="duration" name="duration" min="1" max="60">
-                                <input onclick="openDurationSelect();" type="submit"/>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-<!--                <div id="time_series">-->
-<!--                </div>-->
 
-<!--                <div class="chartWrapper">-->
-         <div class="chartAreaWrapper">
-            <canvas id="time_series" height="300" width="1200"></canvas>
-         </div>
-<!--         <canvas id="myChartAxis" height="300" width="0"></canvas>-->
+                <script>
+function openNav() {
+  document.getElementById("mySidepanel").style.width = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidepanel").style.width = "0";
+}
+</script>
+            </nav>
+            <!-- Graph area -->
+            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+                <br>
+                <div id="time_series"></div>
             </main>
         </div>
     </div>
