--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -15,8 +15,9 @@
     <script type="text/javascript" src="../static/index_source.js"></script>
     <script type="text/javascript" src="../static/server_requests.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.7/chartjs-plugin-annotation.min.js"></script>.
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.7/chartjs-plugin-annotation.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link href="../static/index_style.css" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <style>
@@ -115,6 +116,9 @@
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <br>
                 <div id="time_series"></div>
+                <div class="slidecontainer">
+                    <input class="slidecontainer" id="time-select" type="range" class="slider" id="myRange" step="1000">
+                </div>
             </main>
         </div>
     </div>
