Adjusts step for slider

--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -116,7 +116,10 @@
             <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
                 <div id="time_series"></div>
                 <div class="slidecontainer">
-                    <input class="slidecontainer" id="time-select" type="range" class="slider" id="myRange" step="10000">
+                    <span>
+                        <p id="sliderdisplay"></p>
+                        <input class="slidecontainer" id="time-select" type="range" class="slider" id="myRange" step="1000">
+                    </span>
                 </div>
             </main>
         </div>
