--- a/EEG_Website/static/index_style.css
+++ b/EEG_Website/static/index_style.css
@@ -1,3 +1,22 @@
 .slidecontainer {
+    align-self: center;
     width: 1100px;
+}
+
+#sidebarMenu {
+    width: 13%;
+    height: 100%;
+    background-color: gainsboro;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    padding-left: 2%;
+    padding-top: 5%;
+
+}
+
+#display-area {
+    position: relative;
+    padding-left: 1%;
 }
