--- a/EEG_Website/static/index_style.css
+++ b/EEG_Website/static/index_style.css
@@ -1,15 +1,15 @@
- footer.slidecontainer {
+footer.slidecontainer {
     padding-left: 15%;
- }
+}
 
- .slidecontainer {
+.slidecontainer {
     align-self: center;
     width: 1100px;
- }
+}
 
- #sidebarMenu {
-    width: 13%
-    height: 100%
+#sidebarMenu {
+    width: 13%;
+    height: 100%;
     background-color: gainsboro;
     position: fixed;
     z-index: 1;
@@ -17,17 +17,34 @@
     left: 0;
     padding-left: 2%;
     padding-top: 5%;
- }
 
- #display-area{
- position: relative;
- padding-left: 1%;
- }
+}
 
- #sliderdisplay{
- display: inline;
- }
+.annotation-menu {
+    width: 0%;
+    height: 100%;
+    background-color: gainsboro;
+    z-index: 2;
+    top: 0;
+    right: 0;
+    left: 85%;
+    position: fixed;
+    padding-top: 5%;
+}
 
- #time-select {
+.annotation-item {
+    display: block;
+}
+
+#display-area {
+    position: relative;
+    padding-left: 1%;
+}
+
+#sliderdisplay {
+    display: inline;
+}
+
+#time-select {
     display: inline-flex;
- }
+}
