Callback for color picker to chart creation
Enable changing colors for channels through clicking chart

--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -122,6 +122,12 @@
     </div>
     <!-- Graph area -->
     <div id="display-area">
+        <select id="color-select">
+            <option value="#51A1E8">Blue</option>
+            <option value="#000000">Black</option>
+            <option value="#ff0000">Red</option>
+            <option value="#ffff00">Yellow</option>
+        </select>
         <div id="time_series"></div>
         <footer class="slidecontainer">
             <p class="slidecontainer" id="sliderdisplay"></p>
