Update duration select to drop down select as opposed to numerical input

--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -58,7 +58,7 @@
                 <!-- Select time duration-->
                 <div>
                     <h2 class="btn btn-sm btn-outline-secondary">Duration</h2>
-                    <select class="form-select form-select-sm" type="number" id="duration" name="duration">
+                    <select class="form-select form-select-sm" type="number" id="duration-input" name="duration">
                         <option value="1">1 second</option>
                         <option value="5">5 seconds</option>
                         <option value="10">10 seconds</option>
