Add front end functionality for selecting specific reference to run model on

--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -112,6 +112,9 @@
                 <!-- RUN MODEL -->
                 <li>
                     <button id="model-button" class="btn btn-sm btn-outline-secondary" onclick="startModel();">Initiate Model</button><br>
+                    <select class="form-select form-select-sm" type="number" id="reference-input" name="reference-input">
+                        <option id="ref-default" selected>None Selected</option>
+                    </select>
                     <a id="model-load"></a>
                 </li>
                 <!-- SELECT ANNOTATION FILE -->
