Add front end functionality for selecting specific reference to run model on
Adds kmeans model and pickle file to server

Working version of machine learning integration in backend. Lacks event stream updates from feature extraction

Adds scrolling functionality to annotation menu

Fix formatting for prediction dataframe to csv. (By removing index column)

--- a/EEG_Website/static/index_style.css
+++ b/EEG_Website/static/index_style.css
@@ -30,6 +30,8 @@ footer.slidecontainer {
     left: 85%;
     position: fixed;
     padding-top: 5%;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .annotation-item {
