More styling to header bar

--- a/EEG_Website/templates/index.html
+++ b/EEG_Website/templates/index.html
@@ -78,8 +78,11 @@
 
             <div class="btn-group me-2">
                 <!--Toggle display of buttons when annotations are uploaded is TODO -->
+                <span>
                     <br>
-                    <button class="btn btn-sm btn-outline-secondary" onclick="listAnnotations();" type="button" id = "ann_pop" aria-expanded="false">Annotations</button>
+                    <button class="btn btn-outline-light" onclick="listAnnotations();" type="button" id = "ann_pop" aria-expanded="false">Annotations</button>
+                </span>
+
             </div>
         </div>
     </header>
